--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta property="og:image" content="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSXT6ZW-6kNkSK7AaHibk7PQdAWqzkO6iGwYA&s">
+    <meta property="og:title" content="sandboxFrontend">
+    <meta property="og:description" content="Сайт-песочница, на которой я пробую себя в качестве frontend developer'а" >
     <title>Studying...</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
