--- a/index.html
+++ b/index.html
@@ -31,10 +31,13 @@
     <li class="download menu-item">
         <a href="public/css/index.css" download="public/css/index.css">Скачать текущий html файл</a>
     </li>
-    <li class="menu-item"><a href="#first">first</a></li>
-    <li class="menu-item"><a href="#second">second</a></li>
-    <li class="menu-item"><a href="#third">third</a></li>
-    <li class="menu-item"><a href="#last">last</a></li>
+</ul>
+<hr>
+<ul class="menu nav-menu">
+    <li class="menu-item nav-menu-item"><a href="#first">first</a></li>
+    <li class="menu-item nav-menu-item"><a href="#second">second</a></li>
+    <li class="menu-item nav-menu-item"><a href="#third">third</a></li>
+    <li class="menu-item nav-menu-item"><a href="#last">last</a></li>
 </ul>
 <div class="big_text">
     <p id="first">
